@@ -1,5 +1,8 @@
 2021-02-01  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	Moved implementation from Java (and removed Java).
+
 	* src/main/java/galyleo/kernel/Kernel.java,
 	src/main/java/galyleo/server/Server.java:
 	Re-factored all communications code to Server.
